infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-challenge
  labels:
    app: cloud-challenge
